# youtube-transcriber

./: .env.production  .gitignore  Dockerfile  LICENSE  README.ja.md  README.md  channel_list.txt  config.sample.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  space_channels.txt  test_small.txt
config/: config.sample.yaml
deployment/: alerts.yml  deploy.sh  prometheus.yml
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  CHANGELOG.md  CI-CDテスト自動化実装案.md  CODE_QUALITY_REPORT.md  CRITICAL_FIX_IMPLEMENTATION.md  Claude.md  Critical_バグ修正技術ドキュメント.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  INTEGRATION_REPORT.md  INTEGRATION_TEST_SCENARIOS.md  MCP_INTEGRATION_PLAN.md  MULTI_CHANNEL_API.md  MULTI_CHANNEL_UI_DESIGN.md  MULTI_CHANNEL_UI_IMPLEMENTATION.md  MULTI_CHANNEL_USAGE.md  OPERATIONS_MANUAL.md  PERFORMANCE_TUNING.md  REFACTORING_RECOMMENDATIONS.md  STATISTICS_API.md  TECHNICAL_DEBT_REGISTRY.md  TESTING_GUIDE.md  TROUBLESHOOTING_GUIDE.md  UI_BACKEND_INTEGRATION_SPEC.md  UI_FIX_PROPOSALS.md  UI_INTEGRATION_READY.md  UI_INVESTIGATION_REPORT.md  UI_PERFORMANCE_OPTIMIZATION.md  UI_USABILITY_CHECKLIST.md  USABILITY_ANALYSIS.md  USABILITY_IMPROVEMENTS.md  USER_GUIDE.md  UX_VERIFICATION_REPORT.md  architecture-diagram.drawio  manager_report.txt  manager_report_deployment.txt  manager_report_quality.txt  pep8_analysis_report.md  (+12 more)
monitoring/: DASHBOARD_DESIGN.md  monitoring_config.yaml
src/: __init__.py
tests/: conftest.py  e2e_multi_channel_test.py  test_display_components.py  test_e2e_user_flow.py  (+2 more)
(+79 files in other folders)
