[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-transcriber"
version = "1.0.0"
description = "YouTube channel transcript extraction CLI application"
authors = [{name = "AI Team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.6.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.5.0",
    "loguru>=0.7.0",
    "aiohttp>=3.9.0",
    "yt-dlp>=2024.1.1",
    "youtube-transcript-api>=0.6.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
youtube-transcriber = "src.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90"
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true